add springbatch to import students from execel file

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,3 @@
-#Batch Configuration
-spring.batch.initializer.enabled=true
-spring.batch.job.enabled=false
-
 ### In-memory database ###
 spring.datasource.schema=classpath*:db/initDB.sql
 spring.datasource.data=classpath*:db/populateDB.sql
@@ -20,6 +16,10 @@ mybatis.type-aliases-package=cn.edu.nju.sa2017.model
 #logging.level.org.mybatis=INFO
 #logging.level.com.shawn=DEBUG
 
+#Batch Configuration
+excel.to.database.job.source.file.path=data/students.xlsx
+spring.batch.initializer.enabled=true
+spring.batch.job.enabled=false
 
 #pagehelper
 pagehelper.helperDialect=mysql
